--- a/forest_of_trees/Cargo.toml
+++ b/forest_of_trees/Cargo.toml
@@ -5,5 +5,7 @@ edition = "2021"
 
 [dependencies]
 dynamic-weighted-index = "0.1.0"
-pcg_rand = "0.13.0"
-rand = "0.8.5"
+rand = "0.8"
+pcg_rand = "0.13"
+csv = "1.3" 
+rand_distr = "0.4"
