--- a/bus/WSS-WIRS/CMakeLists.txt
+++ b/bus/WSS-WIRS/CMakeLists.txt
@@ -5,4 +5,11 @@ project(DynamicSetSampling)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -march=native")
 
-add_executable(DynamicWeightedSetSampling main.cpp ScapegoatTree.hpp BSTSampling.hpp QuickBucket.hpp basic_bst.hpp basic_alias.hpp)
+add_library(libWSSWIRS INTERFACE)
+target_include_directories(libWSSWIRS INTERFACE include/)
+add_executable(bench_sampling
+	source/main.cpp)
+
+target_link_libraries(libWSSWIRS INTERFACE)
+target_include_directories(bench_sampling PRIVATE ${CMAKE_SOURCE_DIR}/include/WSSWIRS)
+
